--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
 	"license": "MIT",
 	"version": "0.0.1",
 	"devDependencies": {
+		"@babel/preset-react": "^7.0.0",
+		"@babel/preset-typescript": "^7.1.0",
 		"prettier": "1.14.3",
 		"redux": "^3.5.2",
 		"redux-thunk": "^2.3.0",
 		"rollup": "^0.66.6",
+		"rollup-plugin-babel": "^4.1.0",
 		"rollup-plugin-commonjs": "^9.2.0",
 		"rollup-plugin-css-only": "^0.4.0",
 		"rollup-plugin-node-resolve": "^3.4.0",
@@ -20,6 +23,11 @@
 		"typescript": "^3.0.3"
 	},
 	"dependencies": {
-		"@types/node": "^8.10.36"
+		"@babel/core": "^7.2.2",
+		"@babel/preset-env": "^7.2.3",
+		"@types/node": "^8.10.36",
+		"react": "^16.7.0",
+		"react-dom": "^16.7.0",
+		"react-redux": "^6.0.0"
 	}
 }
