--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	},
 	"dependencies": {
 		"@babel/core": "^7.2.2",
+		"@babel/plugin-proposal-class-properties": "^7.2.3",
 		"@babel/preset-env": "^7.2.3",
 		"@types/node": "^8.10.36",
 		"react": "^16.7.0",
